# pwrestapi

./: .gitignore  README.md
pw-fastapi/: main.py  pyproject.toml
pw_django/: manage.py  pyproject.toml
pw_django/pw_django/: asgi.py  settings.py  urls.py  wsgi.py
pw_django/tickets/: admin.py  models.py  views.py
pw_django/tickets/migrations/: 0001_initial.py
